# code-similarity

./: Cargo.toml  README.md
scripts/: generate.ts
src/: main.rs
src/detector/: ast.rs  mod.rs  params.rs  simhash.rs  visit.rs
test/: test_a.js  test_b.js
