[package]
name = "code-similarity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = { version = "0.33.21", default-features = false }
swc_ecma_ast = { version = "0.112.6", default-features = false }
swc_ecma_parser = { version = "0.143.11", features = [
    "typescript",
], default-features = false }
swc_ecma_visit = { version = "0.98.7", default-features = false }
xxhash-rust = { version = "0.8.10", features = [
    "xxh3",
], default-features = false }
